# boopsiwizard

./: BoopsiWizard.info  BoopsiWizard.readme  README.md
boopsiwizard/: CMakeLists.txt  boopsiinlines.h  boopsiwizard.c  bpwizard_png.c  compilers.h  convertbin.c  datatypebm.c  datatypebm.h  template_extract.c  templates.c  templates.h
boopsiwizard/cjson/: cJSON.c  cJSON.h
templateClass/: CMakeLists.txt  basenametest.c  bdbprintf.h  class_basename.h  class_basename_attribs.c  class_basename_dispatch.c  class_basename_lib.c  class_basename_private.h  classinit.s  compilers.h  createzip.sh  makefile  simpleclass_template.json  smakefile
templateCommon/: bdbprintf.c  bdbprintf.h
templateGadget/: CMakeLists.txt  basenametest.c  bdbprintf.c  circlegadget_template.json  class_basename.h  class_basename_attribs.c  class_basename_dispatch.c  class_basename_handleinput.c  class_basename_lib.c  class_basename_private.h  class_basename_render.c  classinit.c  classinit.s  compilers.h  createzip.sh  makefile  minialib.h  offscreenbm.c  offscreenbm.h  smakefile  vmakefile
